--- a/web/src/app/pages/settings/settings.component.html
+++ b/web/src/app/pages/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="relative mx-auto flex h-[calc(100vh-120px)] max-w-[900px] flex-col p-4">
+<div class="relative mx-auto flex h-full min-h-0 w-full max-w-[900px] flex-col p-4 sm:p-6">
   <app-settings-header
     [isSaving]="isSaving()"
     [isRestarting]="isRestarting()"
